--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -5,50 +5,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <!-- link the html to css -->
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./predefined.css">
+  <!-- Font style -->
+  <!-- Karla font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
-<body>
-  <div>
-    <div>
-      <h1>Join our community</h1>
-      <h3>30-day, hassle-free money back guarantee</h3>
-      <p>Gain access to our full library of tutorials along with expert code reviews.
+<body class="light-gray">
+  <main class="container grid">
+    <div class="cta white">
+      <h1 class="cta-heading">Join our community</h1>
+      <h3 class="cta-sub-heading">30-day, hassle-free money back guarantee</h3>
+      <p class="cta-paragraph grayish-blue-font">Gain access to our full library of tutorials along with expert code
+        reviews.<br>
         Perfect for any developers who are serious about honing their skills.
       </p>
     </div>
-    <div>
-      <h4>
+    <div class="subscription cyan light-gray-font">
+      <h4 class="subscription-heading">
         Monthly Subscription
       </h4>
-      <p>
-        &dollar;29 per month
+      <p class="subscription-plan">
+        <span class="price">&dollar;29</span><span class="duration">per month</span>
       </p>
-      <p>
+      <p class="subscription-access">
         Full access for less than &dollar;1 a day
       </p>
-      <button>Sign Up</button>
+      <button class="bright-yellow light-gray-font">Sign Up</button>
     </div>
-    <div>
-      <h4>
+    <div class="reason lighter-cyan light-gray-font">
+      <h4 class="reason-heading">
         Why Us
       </h4>
-      <ul>
+      <ul class="list-items no-bullet">
         <li>Tutorials by industry experts</li>
         <li>Peer &amp; expert code review</li>
         <li>Coding exercises</li>
@@ -58,13 +53,13 @@
         <li>New videos every week</li>
       </ul>
     </div>
-  </div>
-  <footer>
+  </main>
+  <!-- <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </p>
-  </footer>
+  </footer> -->
 </body>
 
 </html>
