added media queries at 375px and 610px

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <!-- link the html to css -->
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./predefined.css">
+  <link rel="stylesheet" href="./queries.css">
   <!-- Font style -->
   <!-- Karla font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +24,7 @@
       <h1 class="cta-heading">Join our community</h1>
       <h3 class="cta-sub-heading">30-day, hassle-free money back guarantee</h3>
       <p class="cta-paragraph grayish-blue-font">Gain access to our full library of tutorials along with expert code
-        reviews.<br>
-        Perfect for any developers who are serious about honing their skills.
+        reviews. Perfect for any developers who are serious about honing their skills.
       </p>
     </div>
     <div class="subscription cyan light-gray-font">
